fix: paragraph1 overflowing

--- a/style.css
+++ b/style.css
@@ -148,6 +148,9 @@ body {
     z-index: 2;
 }
 
+.card--txt {
+    max-width: 75ch;
+}
 .row1 .card--img,
 .row2 .card--txt,
 nav {
@@ -169,7 +172,12 @@ nav {
 }
 .card--sml.card--img > img {
     width: 100%;
-    object-fit: fill;
+    height: 100%;
+}
+.row2 > *,
+.row1 > .card--txt {
+    max-width: 75ch;
+    margin-inline: auto;
 }
 
 .row1 .card--txt {
@@ -191,13 +199,18 @@ nav {
     width: 100px;
     right: 0;
 }
+.sliders-cont-desktop {
+    display: none;
+}
 .slider {
     background: #000;
     cursor: pointer;
     padding-block: 1rem;
     padding-inline: 1.15rem;
 }
-
+.slider:hover {
+    background-color: var(--clr-primary-vdarkGray);
+}
 header {
     display: flex;
     position: relative;
@@ -248,15 +261,20 @@ nav {
     padding: 0;
     list-style-type: none;
 }
+.nav__list--desktop {
+    display: none;
+}
 .logo-cont {
     flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
+.row1 p {
+    font-size: clamp(0.735rem, 4vw, 1.15rem);
+}
 .txt-cont h2 {
-    font-size: 2.35rem;
+    font-size: clamp(1.5rem, 7vw, 2.35rem);
     letter-spacing: -1px;
     line-height: 0.85;
     color: #000;
@@ -278,11 +296,14 @@ nav {
     position: absolute;
     bottom: 4rem;
 }
+.shop-link:hover {
+    color: var(--clr-primary-darkGray);
+}
 .shop-link > span {
     margin-right: 12px;
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 1100px) {
     .row1 {
         display: grid;
         grid-template-columns: 3fr 2fr;
@@ -294,7 +315,10 @@ nav {
         grid-template-columns: 3fr 4fr 3fr;
     }
     .btn.btn--navexpand {
-        display: none;
+        display: none !important;
+    }
+    .nav__list--desktop {
+        display: flex;
     }
     .logo-cont {
         justify-content: flex-start;
@@ -334,19 +358,21 @@ nav {
         padding-inline: 5rem;
         padding-block: 6rem;
     }
+    .row2 > *,
+    .row1 > .card--txt {
+        margin: 0;
+    }
     .shop-link {
-        top: 40vh;
+        top: 400px;
         bottom: auto;
     }
-    .shop-link:hover {
-        color: var(--clr-primary-darkGray);
-    }
-    .txt-cont {
-        max-height: 416px;
-    }
     .txt-cont h2 {
-        font-size: 3.15rem;
+        font-size: clamp(1.15rem, 3vw, 3.15rem);
         line-height: 1;
+    }
+    .row1 p,
+    .row2 p {
+        font-size: clamp(0.735rem, 4vw, 1.1rem);
     }
     .row1 .card--img,
     .row2 .card--txt {
@@ -357,6 +383,7 @@ nav {
         display: none;
     }
     .sliders-cont-desktop {
+        display: block;
         position: absolute;
         bottom: 0;
         left: 0;
@@ -365,8 +392,5 @@ nav {
     .sliders-cont-desktop > .slider {
         padding-block: 1.8rem;
         padding-inline: 1.8rem;
-    }
-    .slider:hover {
-        background-color: var(--clr-primary-vdarkGray);
     }
 }
